--- a/ru/works/fontain/index.html
+++ b/ru/works/fontain/index.html
@@ -7,22 +7,22 @@
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.BnCcm2xy.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?280fa3c9-92ff-4c12-bb07-73adb089c388">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CdXS80uE.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DMLZA9DO.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DYmE-Cee.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/works/fontain/_payload.json?ab73e87b-4472-4def-89f3-2047f0423820">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DfDj95Qh.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CGhJl-RY.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/tICQazVl.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CYBzCKBM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B567iwCy.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/tzlzgnvx.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/ChZteGDv.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DHxNOTXd.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CHddXJyZ.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BNs7t-ix.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BMGPMocw.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/pCYjQcSN.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CDwjnJYe.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D33PHETq.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Co6-9tfa.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D0bzgtNW.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/e6ikU409.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/CdXS80uE.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?280fa3c9-92ff-4c12-bb07-73adb089c388">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736213326413]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"280fa3c9-92ff-4c12-bb07-73adb089c388",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DfDj95Qh.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/works/fontain/_payload.json?ab73e87b-4472-4def-89f3-2047f0423820">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/works/fontain",1736217778410]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"ab73e87b-4472-4def-89f3-2047f0423820",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
