--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Topbar.B31LBrtP.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?ab73e87b-4472-4def-89f3-2047f0423820">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DfDj95Qh.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BAjL0FWT.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/tICQazVl.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?0ec84722-3d29-4df4-ab8c-5f35454dc015">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BXwQA9WZ.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B4iiVpzE.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZu7uyRC.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cs7jSZiT.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/pCYjQcSN.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B0r5u_DY.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B4HobTpQ.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CDwjnJYe.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Co6-9tfa.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D0bzgtNW.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/e6ikU409.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/5tkoWr5L.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DO0hedAK.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BmiqSCZb.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DsE4TbSR.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BA8SoG0M.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C1wbcJ6U.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BdUxkC2g.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DzOWYow4.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/DfDj95Qh.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?ab73e87b-4472-4def-89f3-2047f0423820">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736217778415]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"ab73e87b-4472-4def-89f3-2047f0423820",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/BXwQA9WZ.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?0ec84722-3d29-4df4-ab8c-5f35454dc015">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736218861709]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"0ec84722-3d29-4df4-ab8c-5f35454dc015",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
